--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-      <title>Portfólio</title>
+      <title>Software Developers</title>
       <meta charset="utf-8">
+      <meta name="description" content="Professional portfolio by Gabriel and Mayara - amazing brazilians developers!">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
 
