Edição da página.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <meta charset="utf-8">
       <meta name="description" content="Professional portfolio by Gabriel and Mayara - amazing brazilians developers!">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <script src="https://use.fontawesome.com/331ca807fa.js"></script>
   </head>
 
   <body>
@@ -32,10 +33,21 @@
           </div>
       </header>
 
-      <main>
+      <main role="main">
+        <section id="main-title-js" class="cursor-pointer"></section>
           <p> Portfólio
               <br> dos Desenvolvedores </p>
           <h1> Gabriel Lima e Mayara Rysia </h1>
+          <p>
+              Software Developers 
+              <strong>&&</strong>
+              <br>
+              JavaScript Fans 
+              <strong>&&</strong>
+              <br>
+              Dedicated Students
+          </p>
+        </section>
       </main>
 
       <section>
@@ -59,6 +71,14 @@
 
       <section>
           <h2>Gabriel Lima</h2>
+          <span class="navbar-text">
+                <strong>Gabriel Lima</strong> | Software Developer
+                <span class="home-social-media-links">
+                    <a href="" alt="link to LinkedIn profile" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a> &diams;
+                    <a href="" alt="link to Github profile" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> &diams;
+                    <a href="" alt="link to Twitter profile" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                </span>
+            </span>
           <div>
               <div>
                   <img src="#" alt="Foto do projeto 1">
@@ -91,13 +111,16 @@
       <section>
           <h2>Mayara Rysia</h2>
           <div>
+            <span class="navbar-text">
+                <strong>Mayara Lima</strong> | Software Developer
+                <span class="home-social-media-links">
+                    <a href="https://www.linkedin.com/in/rysia/" alt="link to LinkedIn profile" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a> &diams;
+                    <a href="https://github.com/mayararysia/" alt="link to Github profile" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> &diams;
+                    <a href="https://twitter.com/mayararysia_" alt="link to Twitter profile" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                </span>
+            </span>
               <div>
-                  <img src="#" alt="Foto do projeto 1">
-                  <div>
-                      <h2>Projeto 1</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum scelerisque ex, luctus elementum
-                          est efficitur eu. Donec eget purus nulla. Fusce pulvinar, elit id congue lu.</p>
-                  </div>
+                <h2>Graduanda em Sistemas de Informação - IFAL (2017-2021)</h2>
               </div>
               <div>
                   <img src="#" alt="Foto do projeto 2">
