Alterações da página

--- a/index.html
+++ b/index.html
@@ -1,150 +1,99 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      <title>Software Developers</title>
-      <meta charset="utf-8">
-      <meta name="description" content="Professional portfolio by Gabriel and Mayara - amazing brazilians developers!">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <script src="https://use.fontawesome.com/331ca807fa.js"></script>
-  </head>
 
-  <body>
-      <header>
-          <div>
-              <a href="#">
-                  <img src="" alt="Logo do Portfólio">
-              </a>
-              <nav>
-                  <ul>
-                      <li>
-                          <a href="#">Sobre</a>
-                      </li>
-                      <li>
-                          <a href="#">Gabriel Lima</a>
-                      </li>
-                      <li>
-                          <a href="#">Mayara Rysia</a>
-                      </li>
-                      <li>
-                          <a href="#">Contato</a>
-                      </li>
-                  </ul>
-              </nav>
-          </div>
-      </header>
+<head>
+    <title>Software Developers</title>
+    <meta charset="utf-8">
+    <meta name="description" content="Professional portfolio by Gabriel and Mayara - amazing brazilians developers!">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://use.fontawesome.com/331ca807fa.js"></script>
+    <link rel="stylesheet" href="css/main.css">
+</head>
 
-      <main role="main">
-        <section id="main-title-js" class="cursor-pointer"></section>
-          <p> Portfólio
-              <br> dos Desenvolvedores </p>
-          <h1> Gabriel Lima e Mayara Rysia </h1>
-          <p>
-              Software Developers 
-              <strong>&&</strong>
-              <br>
-              JavaScript Fans 
-              <strong>&&</strong>
-              <br>
-              Dedicated Students
-          </p>
-        </section>
-      </main>
+<body>
+    <header>
+        <div class="cabecalho">
 
-      <section>
-          <h2>Lorem ipsum dolor sit</h2>
-          <div>
-              <div>
-                  <img src="#" alt="Garantia do produtos">
-                  <h3>Lorem ipsum dolor sit</h3>
-              </div>
-              <div>
-                  <img src="#" alt="Segurança dos produtos">
-                  <h3>Lorem ipsum dolor sit</h3>
-              </div>
+            <img src="assets/Logo.png" alt="Logo do Portfólio">
+            <nav class="menu">
+                <ul>
+                    <li>
+                        <a class="link" href="#">Sobre</a>
+                    </li>
+                    <li>
+                        <a class="link" href="#">Contato</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum scelerisque ex, luctus elementum est
-                  efficitur eu. Donec eget purus nulla. Fusce pulvinar, elit id congue luctus, ex nulla suscipit nisi, at aliquet
-                  metus eros et ante. Duis aliquam metus nulla, in mattis enim molestie sit amet. Vivamus quis maximus quam.
-              </p>
-          </div>
-      </section>
+    <!-- Menu com o nome dos desenvolvedores -->
 
-      <section>
-          <h2>Gabriel Lima</h2>
-          <span class="navbar-text">
-                <strong>Gabriel Lima</strong> | Software Developer
+    <div class="submenu">
+        <ul>
+            <li class="female">
+                <a class="link" href="html/mayara.html">Mayara Rysia</a>
+            </li>
+            <li class="male">
+                <a class="link" href="html/gabriel.html">Gabriel Lima</a>
+            </li>
+        </ul>
+    </div>
+
+    <!-- Seção onde os conteúdos serão inseridos -->
+
+    <section id="conteudo">
+
+    </section>
+
+    <footer class="rodape">
+        <center>
+            <p>
+                <strong>M</strong>
                 <span class="home-social-media-links">
-                    <a href="" alt="link to LinkedIn profile" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a> &diams;
-                    <a href="" alt="link to Github profile" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> &diams;
-                    <a href="" alt="link to Twitter profile" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/in/rysia/" alt="link to LinkedIn profile" target="_blank">
+                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                    </a> &diams;
+                    <a href="https://github.com/mayararysia/" alt="link to Github profile" target="_blank">
+                        <i class="fa fa-github" aria-hidden="true"></i>
+                    </a> &diams;
+                    <a href="https://twitter.com/mayararysia_" alt="link to Twitter profile" target="_blank">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </a>
                 </span>
-            </span>
-          <div>
-              <div>
-                  <img src="#" alt="Foto do projeto 1">
-                  <div>
-                      <h2>Projeto 1</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum scelerisque ex, luctus elementum
-                          est efficitur eu. Donec eget purus nulla. Fusce pulvinar, elit id congue lu.</p>
-                  </div>
-              </div>
-              <div>
-                  <img src="#" alt="Foto do projeto 2">
-                  <div>
-                      <h2>Projeto 2</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum scelerisque ex, luctus elementum
-                          est efficitur eu. Donec eget purus nulla. Fusce pulvinar, elit id congue lu.</p>
-                  </div>
-              </div>
-              <div>
-                  <img src="#" alt="Foto do projeto 3">
-                  <div>
-                      <h2>Projeto 3</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum scelerisque ex, luctus elementum
-                          est efficitur eu. Donec eget purus nulla. Fusce pulvinar, elit id congue lu.</p>
-                  </div>
-              </div>
-              <a href="#">saiba mais</a>
-          </div>
-      </section>
-
-      <section>
-          <h2>Mayara Rysia</h2>
-          <div>
-            <span class="navbar-text">
-                <strong>Mayara Lima</strong> | Software Developer
+            </p>
+            <p>
+                <strong>G</strong>
                 <span class="home-social-media-links">
-                    <a href="https://www.linkedin.com/in/rysia/" alt="link to LinkedIn profile" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a> &diams;
-                    <a href="https://github.com/mayararysia/" alt="link to Github profile" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> &diams;
-                    <a href="https://twitter.com/mayararysia_" alt="link to Twitter profile" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                    <a href="" alt="link to LinkedIn profile" target="_blank">
+                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                    </a> &diams;
+                    <a href="https://github.com/gabriellima96" alt="link to Github profile" target="_blank">
+                        <i class="fa fa-github" aria-hidden="true"></i>
+                    </a> &diams;
+                    <a href="" alt="link to Twitter profile" target="_blank">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </a>
                 </span>
-            </span>
-              <div>
-                <h2>Graduanda em Sistemas de Informação - IFAL (2017-2021)</h2>
-              </div>
-              <div>
-                  <img src="#" alt="Foto do projeto 2">
-                  <div>
-                      <h2>Projeto 2</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum scelerisque ex, luctus elementum
-                          est efficitur eu. Donec eget purus nulla. Fusce pulvinar, elit id congue lu.</p>
-                  </div>
-              </div>
-              <div>
-                  <img src="#" alt="Foto do projeto 3">
-                  <div>
-                      <h2>Projeto 3</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum scelerisque ex, luctus elementum
-                          est efficitur eu. Donec eget purus nulla. Fusce pulvinar, elit id congue lu.</p>
-                  </div>
-              </div>
-              <a href="#">saiba mais</a>
-          </div>
-      </section>
+            </p>
+        </center>
+    </footer>
 
-      <footer>
-          <p>Fusce pulvinar, elit id congue luctus, ex nulla suscipit nisi, at aliquet metus eros et ante. Duis aliquam metus
-                  nulla, in mattis enim molestie sit amet</p>
-      </footer>
-  </body>
+    <!-- Script da requisição Ajax -->
+
+    <script>
+        document.querySelectorAll('.link').forEach(link => {
+            const conteudo = document.getElementById('conteudo')
+
+            link.onclick = function (e) {
+                e.preventDefault()
+                fetch(link.href)
+                    .then(resp => resp.text())
+                    .then(html => conteudo.innerHTML = html)
+            }
+        })
+    </script>
+</body>
+
 </html>
